--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gatsby-starter-advanced",
-  "description": "GatsbyJS starter that includes examples for advanced use cases.",
-  "version": "1.1.0",
-  "author": "Ruben Harutyunyan <vagr9k@gmail.com>",
+  "name": "aquabubu",
+  "description": "AquaBuBu",
+  "version": "1.0",
+  "author": "aquabubu <aquabubu@gmail.com>",
   "dependencies": {
     "babel-plugin-lodash": "^3.2.11",
     "gatsby": "^1.8.11",
@@ -54,7 +54,6 @@
   "keywords": [
     "gatsby"
   ],
-  "license": "MIT",
   "main": "n/a",
   "scripts": {
     "develop": "gatsby develop",
