--- a/package.json
+++ b/package.json
@@ -23,15 +23,21 @@
     "gatsby-remark-prismjs": "^1.2.0",
     "gatsby-remark-responsive-iframe": "^1.4.2",
     "gatsby-source-filesystem": "^1.4.2",
+    "gatsby-transformer-json": "^1.0.14",
     "gatsby-transformer-remark": "^1.7.0",
+    "gatsby-transformer-sharp": "^1.6.16",
     "lodash": "^4.17.4",
     "lodash-webpack-plugin": "^0.11.4",
     "react": "^15.6.1",
     "react-disqus-comments": "^1.0.3",
     "react-dom": "^15.6.1",
     "react-helmet": "^5.1.3",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
     "react-share": "^1.18.1",
     "react-twitter-widgets": "^1.4.0",
+    "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2",
     "semantic-ui-react": "^0.77.1"
   },
   "devDependencies": {
@@ -41,6 +47,7 @@
     "eslint-config-prettier": "^2.3.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-prettier": "^2.4.0",
     "eslint-plugin-react": "^7.1.0",
     "gh-pages": "^1.0.0",
     "prettier": "^1.5.3",
